name:                server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Api
  build-depends:       base >= 4.7 && < 5
                      , warp
                      , aeson
                      , servant
                      , servant-server
                      , servant-options
                      , wai
                      , wai-extra
                      , wai-cors
                      , transformers
                      , containers
  default-language:    Haskell2010

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
                     , warp
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , transformers
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
